--- a/static/index.css
+++ b/static/index.css
@@ -4,7 +4,8 @@ body { background: #333333;
     margin: 0; padding: 0;
 }
 .newspaper-title { font-family: math; margin-bottom: 0; }
-#container { width: 1000px; max-width: 100%; min-width: 350px; padding: 10px; box-sizing: border-box; margin: auto; position: relative; }
+.container { width: 1000px; max-width: 100%; min-width: 350px; padding: 10px;
+     box-sizing: border-box; margin: auto; position: relative; }
 #left-container { display: inline-block; width: calc(100% - 250px); min-width: 350px; overflow: hidden; }
 #right-container { display: inline-block; width: 250px; float: right }
 .coverPhoto { width: 350px; float: right; }
@@ -66,3 +67,5 @@ body { background: #333333;
         display: flex;
         align-items: center;
 }
+.topnav { float: right; }
+a { color: #77c}
